syntax="proto3";

package transaction;

message Transaction {
    string id = 1;
    string timestamp = 2;
    string processed_timestamp = 3;
    string user_id = 4;
    string account_id = 5;
    string merchant_id = 6;
    double amount = 7;
    string currency = 8;
    string location = 9;
    int32 rating = 10;
    repeated string api_tags = 11;
    repeated string otis_tags = 12;
    repeated string holidays = 14;
    Type type  = 15;
    enum Type {
        CREDIT = 0;
        DEBIT = 1;
        CONTACTLESS = 2;
    }
    bool online = 16;
    bool cashback_valid = 17;
    string merchant_name = 18;
}


